[package]
name = "pogui"
version = "0.1.0"
edition = "2021"



[workspace]
members = [
    "examples/*",
]


[target.'cfg(windows)'.dependencies]

[target.'cfg(windows)'.dependencies.windows]
version = "0.42.0"
features = [
    "implement",
    "Win32_Foundation",
    "Foundation_Numerics",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]


[profile.release]
debug = true

